<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/text_medium_margin">
    <LinearLayout
            android:id="@+id/add_activity_dialog_name"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/AddActivityDialogItem.Header"
                android:layout_marginRight="@dimen/text_small_margin"
                android:text="@string/add_activity_dialog_name"/>
        <TextView
                android:id="@+id/add_activity_dialog_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/AddActivityDialogItem.Header"/>
    </LinearLayout>
    <TextView
            android:id="@+id/add_time"
            style="@style/AddActivityDialogItem"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:layout_below="@id/add_activity_dialog_name"
            android:text="@string/add_time"/>
    <EditText
            android:id="@+id/add_time_edit_text"
            android:layout_toEndOf="@id/add_time"
            android:layout_alignBottom="@id/add_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <TextView
            android:id="@+id/add_activity"
            style="@style/AddActivityDialogItem"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:layout_below="@id/add_time"
            android:text="@string/add_activity"/>
    <EditText
            android:id="@+id/add_activity_edit_text"
            android:layout_toEndOf="@id/add_activity"
            android:layout_alignBottom="@id/add_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/add_activity_dialog_address_item"
            style="@style/AddActivityDialogItem.Header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/add_activity"
            android:layout_margin="10sp"
            android:text="@string/address_item"/>

    <TextView
            android:id="@+id/add_street"
            style="@style/AddActivityDialogItem"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:layout_below="@id/add_activity_dialog_address_item"
            android:text="@string/add_address_street"/>
    <EditText
            android:id="@+id/add_street_edit_text"
            android:layout_toEndOf="@id/add_street"
            android:layout_alignBottom="@id/add_street"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/add_house"
            style="@style/AddActivityDialogItem"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:layout_below="@id/add_street"
            android:text="@string/add_address_house"/>
    <EditText
            android:id="@+id/add_house_edit_text"
            android:layout_toEndOf="@id/add_house"
            android:layout_alignBottom="@id/add_house"
            android:layout_width="40sp"
            android:layout_height="wrap_content"/>
    <TextView
            android:id="@+id/add_apartment"
            style="@style/AddActivityDialogItem"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/add_house_edit_text"
            android:layout_alignBottom="@id/add_house_edit_text"
            android:layout_marginLeft="40sp"
            android:text="@string/add_address_apartment"/>
    <EditText
            android:id="@+id/add_apartment_edit_text"
            android:layout_toEndOf="@id/add_apartment"
            android:layout_alignBottom="@id/add_apartment"
            android:layout_width="40sp"
            android:layout_height="wrap_content"/>
    <TextView
            android:id="@+id/add_city"
            style="@style/AddActivityDialogItem"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:layout_below="@id/add_house"
            android:text="@string/add_address_city"/>
    <EditText
            android:id="@+id/add_city_edit_text"
            android:layout_toEndOf="@id/add_city"
            android:layout_alignBottom="@id/add_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <TextView
            android:id="@+id/add_notes"
            style="@style/AddActivityDialogItem"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:layout_below="@id/add_city"
            android:paddingBottom="50sp"
            android:text="@string/add_notes"/>
    <EditText
            android:id="@+id/add_notes_edit_text"
            android:layout_toEndOf="@id/add_notes"
            android:lines="2"
            android:layout_alignBottom="@id/add_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/add_image"
            style="@style/AddActivityDialogItem"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:layout_below="@id/add_notes"
            android:layout_marginTop="40sp"
            android:paddingBottom="14sp"
            android:text="@string/add_image"/>
    <TextView
            android:id="@+id/add_image_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/add_image"
            android:layout_alignBottom="@id/add_image"/>
    <Button
            android:id="@+id/add_activity_add_image_button"
            android:layout_toEndOf="@id/add_image_url"
            android:layout_alignBottom="@id/add_image_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_image_line"/>

    <Button
            android:id="@+id/add_activity_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/add_activity_button_text"/>

</RelativeLayout>