<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.LoginScreenActivity">

    <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/login_screen_image_view"
            app:layout_constraintBottom_toTopOf="@id/login_edit_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:src="@mipmap/ic_launcher"
            android:layout_margin="@dimen/text_small_margin"
            android:layout_width="100dp"
            android:layout_height="100dp"/>

    <EditText
            android:id="@+id/login_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_hint_text"
            android:layout_margin="@dimen/text_small_margin"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_small_margin"
            android:hint="@string/password_hint_text"
            app:layout_constraintTop_toBottomOf="@id/login_edit_text"
            android:inputType="textPassword"/>

    <CheckBox
            android:id="@+id/remember_me_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14sp"
            android:layout_marginLeft="@dimen/text_small_margin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_edit_text"
            android:text="@string/remember_me_text"/>

    <Button
            android:id="@+id/login_button"
            app:layout_constraintTop_toBottomOf="@id/password_edit_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_confirm_button_text"
    android:layout_margin="@dimen/text_small_margin"/>

</android.support.constraint.ConstraintLayout>